# jellybean

./: CHANGELOG.md  README.md  flake.nix  jellybean.cabal
Network/: Jellybean.hs
example/: Client.hs  Server.hs
