cabal-version:      3.0
name:               jellybean
version:            0.1.0.0
author:             Cameron Dart
maintainer:         cdart2@illinois.edu
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Network.Jellybean
                    -- , Network.Jellybean.Client
                    -- , Network.Jellybean.Server
    build-depends:    base
                    , binary
                    , bytestring
                    , network
                    , unix
    default-language: Haskell2010
    ghc-options:      -Wall
                      -O2

